# tailwag-memory

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
.agents/: README.md  argos-migration.md  cli-mockup.md  code-refactor.md  demo-seed.md  documentation.md  ingestion.md  integration-contract.md  memory-item.md  mock-openai-embeddings.md  neo4j-schema.md  openai-embeddings.md  privacy-biometric-review.md  project-scaffold.md  release-quality-gate.md  retrieval.md  scope-guard.md  source-adapter.md  template.md  test.md  usage-log.md
deploy/: ecs-task-definition.example.json
docs/: agent-trigger-matrix.md  architecture.md  argos-migration.md  aws-beginner-deployment-runbook.md  aws-cicd.md  aws-deployment.md  aws-ecs-deployment.md  aws-manual-updates.md  aws-planned-architecture.md  cli-reference.md  implementation-plan.md  inspect-reference.md  integration-guide.md  memory-endpoints.md  message-relay-aws-testing.md  message-relay-linux-robot-qualification.md  message-relay.md  mockup-implementation-plan.md  repo-functionality-presentation.html  robot-provenance-bos3-migration.md  slack-ingestion.md
examples/: audio-embedding.json  episode.json  event.json  existing-person-episode.json  face-embedding.json
inspect/: index.html  tailwag-affect.html  tailwag-followup-validity.html  tailwag-inspect.css  tailwag-inspect.js  tailwag-memory-items.html  tailwag-person-timeline.html
scripts/: reset_neo4j.py  seed_demo.py
tests/: helpers.py  relay_live_neo4j_concurrency_cases.py  relay_live_neo4j_contention_support.py  relay_live_neo4j_lifecycle_cases.py  relay_live_neo4j_plan_cases.py  relay_live_neo4j_support.py  test_affect.py  test_api_app.py  test_aws_jobs.py  test_aws_relay_deployment.py  test_aws_slack_state.py  test_aws_workers.py  test_biometrics.py  test_cli.py  test_client.py  test_config.py  test_deletion.py  test_embeddings.py  test_examples.py  test_identity.py  test_ingestion.py  test_inspect.py  test_memory_items.py  test_models.py  test_ownership.py  test_package_imports.py  test_relay_auth.py  test_relay_live_neo4j.py  test_relay_messages.py  test_relay_policy.py  test_relay_policy_attestation.py  test_relay_preaudio_live_neo4j.py  (+4 more)
(+115 files in other folders)
