[project]
name = "tailwag-memory"
version = "0.1.0"
description = "Neo4j-only hybrid memory service with OpenAI-backed embeddings and person context synthesis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "neo4j>=5.20.0,<6.0.0",
  "openai>=1.104.2,<3.0.0",
  "slack-sdk>=3.27.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
]

[project.scripts]
tailwag = "tailwag_memory.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
