[project]
name = "tailwag-memory"
version = "0.1.0"
description = "Neo4j-only hybrid memory service with OpenAI-backed embeddings and deterministic/vector-derived person context."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "neo4j>=5.20.0,<6.0.0",
  "openai>=1.104.2,<3.0.0",
  "slack-sdk>=3.27.0,<4.0.0",
]

[project.optional-dependencies]
affect = [
  "torch>=2.0.0",
  "transformers>=4.40.0,<5.0.0",
]

[project.scripts]
tailwag = "tailwag_memory.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tailwag_memory.inspect" = ["assets/*.css", "assets/*.js"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
